# Checkers

./: .coveragerc  .pre-commit-config.yaml  BlankAI.py  ExampleCheckersAI.py  HackyCheckersClientNotAnAI.py  HackyCheckersServer.py  LICENSE-THIRD-PARTY  README.md  Vector2.py  base2d.py  check.sh  checkers.py  ci.sh  pyproject.toml  test-requirements.in  test-requirements.txt
.github/: dependabot.yml
.github/workflows/: autodeps.yml  ci.yml  tests.yml
computer_players/: ExampleCheckersAI.py  MiniMax_AI.py  Y_Max_Jumper_AI.py  machine_client.py  minimax.py  minimax_tree.py
src/checkers/: BlankAI.py  ExampleCheckersAI.py  HackyCheckersClientNotAnAI.py  HackyCheckersServer.py  MiniMax_AI.py  Vector2.py  Y_Max_Jumper_AI.py  __init__.py  __main__.py  async_clock.py  base2d.py  base_io.py  buffer.py  checkers.py  client.py  component.py  element_list.py  encrypted_event.py  encryption.py  game.py  minimax.py  multi_inherit.py  namedtuple_mod.py  network.py  network_shared.py  objects.py  server.py  server_state.py  sound.py  sprite.py  state.py  statemachine.py  test_minimax.py  testing_minimax.py  utils.py  vector.py
src/checkers/data/: Attribution.txt  clock.py
src/checkers_computer_players/: __init__.py  __main__.py  checkers_minimax.py  example_ai.py  machine_client.py  max_y_jumper_ai.py  minimax.py  minimax_ai.py
tests/: helpers.py  protocol_helpers.py  test_async_clock.py  test_base_io.py  test_buffer.py  test_component.py  test_encrypted_event.py  test_encryption.py  test_network.py  test_network_shared.py  test_objects.py  test_sound.py  test_sprite.py  test_statemachine.py  test_utils.py  test_vector.py  testing_minimax.py
tools/: build_direct.py
