[build-system]
requires = ["hatchling >= 1.20.0"]
build-backend = "hatchling.build"

[project]
name = "checkers"
dynamic = ["version"]
authors = [
  { name="CoolCat467", email="CoolCat467@duck.com" },
]
description = "Graphical Checkers Game with AI support"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Games/Entertainment :: Turn Based Strategy",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: pygame",
    "Operating System :: OS Independent",
    "Framework :: Trio",
    "Typing :: Typed",
]
keywords = [
    "ai", "two-player", "checkers", "single-player",
    "checkers-game", "ai-support", "networked-game"
]
dependencies = [
    "libcomponent~=0.0.3",
    "pygame~=2.6.0",
    "typing_extensions>=4.12.2",
    "mypy_extensions>=1.0.0",
    "trio>=0.30.0",
    "exceptiongroup; python_version < '3.11'",
]

[tool.hatch.version]
path = "src/checkers/game.py"

[project.urls]
"Source" = "https://github.com/CoolCat467/Checkers"
"Bug Tracker" = "https://github.com/CoolCat467/Checkers/issues"

[project.gui-scripts]
checkers_game = "checkers.game:cli_run"
checkers_game_server = "checkers.server:cli_run"
checkers_game_minimax_ai_client = "checkers_computer_players.minimax_ai:run"

[project.optional-dependencies]
tests = [
    "pytest>=5.0",
    "pytest-cov>=6.0.0",
    "pytest-trio>=0.8.0",
    "coverage>=7.2.5",
    "uv>=0.5.21",
]
tools = [
    "mypy>=1.17.0",
    "ruff>=0.9.2",
    "codespell>=2.3.0",
    "pre-commit>=4.2.0",
    "attrs>=25.3.0",
]

[tool.hatch.build.targets.wheel.hooks.mypyc]
dependencies = [
    "hatch-mypyc>=0.16.0",
    "mypy>=1.14.1",
]
require-runtime-dependencies = true
exclude = [
    "src/checkers/vector.py",
    "src/checkers/namedtuple_mod.py",
    "src/checkers/multi_inherit.py",
    "src/checkers/statemachine.py",
]

[tool.uv]
package = true

[tool.mypy]
files = [
    "src/checkers/",
    "src/checkers_computer_players",
    "tests",
]
enable_error_code = [
    "truthy-bool",
    "mutable-override",
    "exhaustive-match",
]
show_column_numbers = true
show_error_codes = true
show_traceback = true
disallow_any_decorated = true
disallow_any_unimported = true
ignore_missing_imports = true
local_partial_types = true
no_implicit_optional = true
strict = true
warn_unreachable = true

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

[tool.black]
line-length = 79

[tool.ruff]
line-length = 79
fix = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]

[tool.ruff.lint]
select = [
    "A",     # flake8-builtins
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "COM",   # flake8-commas
    "D",     # pydocstyle
    "E",     # Error
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "FURB",  # refurb
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "R",     # Refactor
    "RET",   # flake8-return
    "RUF",   # Ruff-specific rules
    "S",     # flake8-bandit
    "SIM",   # flake8-simplify
    "SLOT",  # flake8-slots
    "TCH",   # flake8-type-checking
    "UP",    # pyupgrade
    "W",     # Warning
    "YTT",   # flake8-2020
]
extend-ignore = [
    "D203",   # one-blank-line-before-class
    "D204",   # one-blank-line-after-class
    "D211",   # no-blank-line-before-class
    "D213",   # multi-line-summary-second-line
    "D417",   # undocumented-param "Missing argument descriptions"
    "E501",   # line-too-long
    "PYI041", # redundant-numeric-union
    "S101",   # assert (use of assert for tests and type narrowing)
    "SIM117", # multiple-with-statements
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100",  # undocumented-public-module
    "D103",  # undocumented-public-function
    "D107",  # undocumented-public-init
]

[tool.pytest.ini_options]
addopts = "--cov-report=xml --cov-report=term-missing --cov=checkers"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source_pkgs = ["checkers"]
omit = [
    "__init__.py",
]
parallel = true
relative_files = true
source = ["."]

[tool.coverage.report]
precision = 1
skip_covered = true
exclude_also = [
    "pragma: no cover",
    "abc.abstractmethod",
    "if TYPE_CHECKING.*:",
    "if _t.TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "@overload",
    'class .*\bProtocol\b.*\):',
    "raise NotImplementedError",
]
partial_branches = [
    "pragma: no branch",
    "if not TYPE_CHECKING:",
    "if not _t.TYPE_CHECKING:",
    "if not t.TYPE_CHECKING:",
    "if .* or not TYPE_CHECKING:",
    "if .* or not _t.TYPE_CHECKING:",
    "if .* or not t.TYPE_CHECKING:",
]
